atualização do index

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta dolore iste dolorum quibusdam ipsam dolores accusantium ducimus quaerat aliquid, sequi blanditiis delectus eum vitae rerum atque assumenda eveniet, reprehenderit odit?</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta dolore iste dolorum quibusdam ipsam dolores accusantium ducimus quaerat aliquid, sequi blanditiis delectus eum vitae rerum atque assumenda eveniet, reprehenderit odit?</p>
 </body>
 </html>
